<?xml version="1.0"?>
<package format="2">
  <name>with-joy-con</name>
  <version>0.0.0</version>
  <description>The with-joy-con package</description>

  <maintainer email="is0575ve@ed.ritsumei.ac.jp">komujina</maintainer>

  <license>BSD 2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
